Readded ability to specify maven profiles for build.